# fixmate-desktop

./: AUTO_UPDATER_QUICK_START.md  BUILD_WINDOWS.md  COMPLETE_SETUP_GUIDE.md  CRASH_INVESTIGATION.md  ELECTRON_EXE_GUIDE.md  GITHUB_ACTIONS_BUILD.md  PERSISTENT_WIDGET_GUIDE.md  PRODUCTION_TEST_RESULTS.md  PWA_INSTALLATION_GUIDE.md  QUICK_START_GITHUB_ACTIONS.md  README.md  TAURI_AUTO_UPDATER.md  TAURI_README.md  TEST_REPORT.md  UPDATE_ENDPOINT.md  WINDOWS_INSTALLER_GUIDE.md  build.ps1  package.json  pnpm-lock.yaml  todo.md  version.json  vite.config.ts
.github/workflows/: tauri-build.yml
.manus/db/: db-query-1766492240008.json  db-query-1766496748442.json  db-query-1766497586141.json  db-query-1766583721763.json  db-query-1766583730421.json  db-query-1766585279808.json  db-query-1766750813874.json  db-query-1766798050003.json  db-query-1766849748440.json  db-query-1766849759947.json  db-query-1766853435724.json  db-query-1766853861230.json
client/: index.html
client/dev-dist/: sw.js
client/public/: manifest.json
client/src/: App.tsx  index.css
drizzle/: 0003_flawless_warbird.sql  0004_superb_darwin.sql  0005_regular_solo.sql  0006_early_iron_monger.sql  0007_glossy_shinobi_shaw.sql  0008_special_mandroid.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  (+3 more)
server/: chat.sambanova.test.ts  db.ts  fixes.test.ts  metrics.test.ts  routers.ts  subscriptions.trial.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+56 files in other folders)
