[package]
name = "pc-doctor"
version = "1.0.0"
description = "FixMate AI - PC System Optimizer"
authors = ["PC Doctor Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
